--- a/js-zaklady-svelte/package.json
+++ b/js-zaklady-svelte/package.json
@@ -14,6 +14,8 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.20",
+		"flowbite": "^2.5.2",
+		"flowbite-svelte": "^0.47.3",
 		"postcss": "^8.4.47",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
